--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,12 @@ body {
 header {
     width: 100%;
     height: 400px;
-    background-image: url(fondo.jpg);
+    background-image: url(../Imagenes/fondo.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
+
 header img {
     width: 200px;
     height: 200px;
@@ -26,12 +27,12 @@ header img {
 header div {
     width: 100%;
     height: 100%;
-    background: linear-gradient(319deg,rgba(141, 34, 195, 0.597) 0%, rgba(0, 0, 0, 0.532) 100%);
+    background: linear-gradient(319deg, rgba(141, 34, 195, 0.597) 0%, rgba(0, 0, 0, 0.532) 100%);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    color: white;   
+    color: white;
 }
 
 header img:hover {
@@ -64,7 +65,7 @@ section :hover {
     transition: all 0.3s ease-in-out;
 }
 
-section img{
+section img {
     width: 60%;
     height: 50%;
     border-radius: 50%;
@@ -88,7 +89,8 @@ button {
 button:hover {
     background-image: url(https://i.pinimg.com/1200x/62/1a/0d/621a0d5b91e09b8389bf5ab764cee8db.jpg);
 }
-main{
+
+main {
     align-items: flex-start;
     /* flex-direction: column; */
     flex-wrap: nowrap;
@@ -99,9 +101,9 @@ main{
     display: flex;
     padding: 25px;
     margin: 20px;
-    gap:30px;
+    gap: 30px;
     color: white;
-    
+
 }
 
 li {
@@ -110,7 +112,7 @@ li {
     gap: 10px;
 }
 
-footer { 
+footer {
     width: 100%;
     height: 150px;
     background-image: url(https://i.pinimg.com/1200x/62/1a/0d/621a0d5b91e09b8389bf5ab764cee8db.jpg);
@@ -158,6 +160,7 @@ footer button {
     font-weight: bold;
     cursor: pointer;
 }
+
 footer button:hover {
     background-image: url(https://i.pinimg.com/1200x/62/1a/0d/621a0d5b91e09b8389bf5ab764cee8db.jpg);
     box-shadow: 0 0 20px 15px #c080f8;
